src/test/ui/issues/issue-19692.stderr
error[E0599]: no method named `kaname` found for type `Homura` in the current scope
  --> $DIR/issue-19692.rs:4:40
   |
LL | struct Homura;
   | -------------- method `kaname` not found for this
...
LL |     let Some(ref madoka) = Some(homura.kaname());
   |                                        ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
